# Jetson

./: .gitignore  LEFT ESP32  RIGHT ESP32  disable_cloud.sh  fix_remove_cloud.sh  fix_robot.sh  fix_slam_tf.sh  frames_2026-04-30_06.20.11.gv  frames_2026-05-01_09.01.53.gv  frames_2026-05-01_09.34.30.gv
src/: README.md
src/dynamixel_interfaces/: CMakeLists.txt  package.xml
src/dynamixel_interfaces/msg/: DynamixelCommand.msg  DynamixelState.msg
src/dynamixel_motors/: package.xml  setup.cfg  setup.py  setup.py.bak
src/dynamixel_motors/config/: motors.yaml  nav2_params.yaml  nav2_params.yaml.bak_1777703038  slam_toolbox.yaml  slam_toolbox.yaml.bak_1777734710  ydlidar.yaml
src/dynamixel_motors/dynamixel_motors/: cmd_vel_bridge.py  diff_drive_controller.py  dynamixel_driver.py  dynamixel_node.py  dynamixel_node.py.patch  odom_node.py  odom_node.py.bak_1777702824  odom_node.py.bak_1777734709  odom_node.py.bak_1777734973  odom_node.py.bak_1777735074  rs485_diag.py  scan_relay.py
src/dynamixel_motors/launch/: robot.launch.py  slam_only.launch.py
src/dynamixel_motors/scripts/: dynamixel_node
src/dynamixel_motors/urdf/: robot.urdf
src/lgdx/: lgdxrobotics-apt-source.deb
src/lgdx/lgdxrobot2_agent/src/: Agent.cpp  Agent.cpp.bak  Cloud_DISABLED.cpp  Mcu.cpp  Sensors.cpp
src/lgdx/lgdxrobot2_bringup/launch/: bringup.launch.py  gz_nav.launch.py  nav.launch.py  webots_nav.launch.py
src/lgdx/lgdxrobot2_bringup/param/: ekf.yaml
src/lgdxrobot2sim_webots/protos/: LGDXRobot2.proto
src/lgdxrobot2sim_webots/src/: LgdxRobot2Driver.cpp
(+20 files in other folders)
